xa-test> Atomikos入门测试

--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,13 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <scope>runtime</scope>
+            <!-- runtime是在运行时框架使用的, 如果想手动使用驱动的某个类, 则需要把范围扩大 -->
+            <!--<scope>runtime</scope>-->
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-jta-atomikos</artifactId>
         </dependency>
 
         <dependency>
