xa-test> tcc-test> 测试多数据源异常时: 默认事务管理器是否能够回滚所有数据源

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>mycat-xa-test</module>
         <module>atomikos-xa-test</module>
+        <module>tcc-test</module>
     </modules>
 
     <parent>
