--- a/tcc-test/pom.xml
+++ b/tcc-test/pom.xml
@@ -52,6 +52,13 @@
             <artifactId>httpclient</artifactId>
             <version>4.5.10</version>
         </dependency>
+
+        <!-- RoctetMQ -->
+        <dependency>
+            <groupId>org.apache.rocketmq</groupId>
+            <artifactId>rocketmq-client</artifactId>
+            <version>4.5.2</version>
+        </dependency>
     </dependencies>
 
     <build>
