xa-test> tcc-test> 分布式事务接口幂等性: 资源初始化

--- a/tcc-test/pom.xml
+++ b/tcc-test/pom.xml
@@ -27,6 +27,12 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- Thymeleaf模板引擎 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
@@ -53,7 +59,7 @@
             <version>4.5.10</version>
         </dependency>
 
-        <!-- RoctetMQ -->
+        <!-- RocketMQ -->
         <dependency>
             <groupId>org.apache.rocketmq</groupId>
             <artifactId>rocketmq-client</artifactId>
