--- a/tcc-test/pom.xml
+++ b/tcc-test/pom.xml
@@ -65,6 +65,20 @@
             <artifactId>rocketmq-client</artifactId>
             <version>4.5.2</version>
         </dependency>
+
+        <!-- 引入Curator客户端: 使用ZK分布式锁 -->
+        <dependency>
+            <groupId>org.apache.curator</groupId>
+            <artifactId>curator-recipes</artifactId>
+            <version>4.2.0</version>
+        </dependency>
+
+        <!-- 引入Zookeeper客户端: 使用老的ZK客户端适配Curator客户端 -->
+        <dependency>
+            <groupId>org.apache.zookeeper</groupId>
+            <artifactId>zookeeper</artifactId>
+            <version>3.4.10</version>
+        </dependency>
     </dependencies>
 
     <build>
